may    13, 2001 : Otto Bruggeman
	contextdiff is better implemented it find all stuff in the diff atm
	but it does not work.
may     4, 2001 : Otto Bruggeman
	cleaned up the code by moving the part to a subdir
	halfassed implementation of contextdiff, will update later today
april  10, 2001 : John Firebaugh
	use new model/view architecture (not completely implemented yet)
	NOTE: it will (should) compile, but you won't see any differences... a
	work in progress
april  5th, 2001 : Otto Bruggeman
	Implemented the ability to move from chuck to chunk in the htmlview
	Cleaned up the preferences, squashed a few bugs
april  4th, 2001 : Otto Bruggeman
	Normal format works as well
april  4th, 2001 : Otto Bruggeman
	Finally implemented the preferences menu... i still lack some nice 
	icons for it but that will be solved in the near future...
march 25th, 2001 : Otto Bruggeman
	Moved the application icons to the pics dir
march 20th, 2001 : Otto Bruggeman
	Fixed a stupid bug that caused the last line in the rightview not
	to be colored.
	Implemented slots for using the KHistoryCombo in the views to select
	files with.
	Still a nasty bug with regard to the initial directory in the
	KFileDialog, needs to be fixed asap but i dont know the cause.
	Still an error in the historylist and completionlist items. They are
	not shown correctly.
march 19th, 2001 : Otto Bruggeman
	Added most of the preferences dialog
	Some speed improvements
	Some fixes to use the last used directory in KFileDialog