@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="kdiff_shell" version="1">
+<kpartgui name="kdiff_shell" version="2">
 <MenuBar>
   <Menu noMerge="1" name="file"><text>&amp;File</text>
     <Action name="file_compare_files"/>
